# oge-math-project

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  JOURNEY.md  Methodology_v2_1.md  Project_Brain_v3_2.md  alembic.ini  deploy.sh  pyproject.toml  КАК_ЗАПУСТИТЬ.md  Команда_агентов_v1.md  Команда_агентов_v1_1.md
.claude/: settings.json  settings.local.json
backend/: config.py  main.py  requirements.txt
content/: Контент_напоминания.csv  Контент_урок_1_1.csv  Контент_урок_1_2.csv  Контент_урок_1_3.csv  Контент_урок_1_4.csv  Контент_урок_1_5.csv  Контент_урок_1_6.csv  Контент_урок_1_7.csv  Контент_урок_1_8.csv  Контент_урок_1_9.csv
docs/: Маршрутизация_ClaudeCode_Codex_v2.md  Протокол_ClaudeCode_Codex_v2.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
prompts/: Агент_0_Project_Lead_v1.txt  Агент_1_Продюсер_v4_1.txt  Агент_2_Критик_v2_1.txt  Агент_3_Архитектор_v1.txt  Агент_4_Критик_системы_v1.txt  Агент_5_Ревьюер_кода_v1.txt  Агент_6_UI_дизайн-система_v1.txt  Агент_7_DevOps_v1.txt  Агент_8_Копирайтер_v1.txt  Агент_9_Продуктолог_v1_1.txt  Шаблон_возврата_из_Codex_v2.md  Шаблон_передачи_в_Codex_v2.md
specs/: A6_UI_дизайн-система_ученик_v1.md  A8_microcopy_ученик_v1.md  A8_microcopy_ученик_v1_1.md  INDEX.md  day_end_screen_v1.md  student_lesson_api_v1.md  student_lesson_fsm_v1.md  student_lesson_fsm_v2.md  student_lesson_fsm_v3.md  student_lesson_fsm_v4.md  student_registration_api_v1.md  student_registration_fsm_v1.md  student_registration_fsm_v2.md
(+132 files in other folders)
